<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/yuanjiao_10_baise_top"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/changepassword_h2"
                android:textColor="@color/black1"
                android:textSize="12.5sp"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical|right"
                android:hint="@string/changepassword_h5"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textStyle="bold"
                android:singleLine="true"
                android:textColor="@color/black2"
                android:textColorHint="@color/black3"
                android:textSize="12.5sp"
                android:background="@drawable/edittext_bg" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/changepassword_h3"
                android:textColor="@color/black1"
                android:textSize="12.5sp"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical|right"
                android:hint="@string/changepassword_h6"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textStyle="bold"
                android:singleLine="true"
                android:textColor="@color/black2"
                android:textColorHint="@color/black3"
                android:textSize="12.5sp"
                android:background="@drawable/edittext_bg" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/changepassword_h4"
                android:textColor="@color/black1"
                android:textSize="12.5sp"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical|right"
                android:hint="@string/changepassword_h7"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textStyle="bold"
                android:singleLine="true"
                android:textColor="@color/black2"
                android:textColorHint="@color/black3"
                android:textSize="12.5sp"
                android:background="@drawable/edittext_bg" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_img1"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/settransactionpassword_h12"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>