<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yuanjiao_10_bg_top"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="2dp"
                android:text="@string/settransactionpassword_h2"
                android:textColor="@color/black1"
                android:textSize="12.5sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:focusable="false"
                android:gravity="center_vertical|right"
                android:hint="@string/settransactionpassword_h3"
                android:inputType="phone"
                android:paddingLeft="100dp"
                android:paddingRight="10dp"
                android:textColor="@color/black2"
                android:textColorHint="@color/black3"
                android:textSize="12.5sp"
                android:textStyle="bold"
                android:background="@drawable/edittext_bg" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="验证码"
                android:layout_centerVertical="true"
                android:textColor="@color/black1"
                android:textStyle="bold"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/settransactionpassword_h5"
                android:inputType="number"
                android:textStyle="bold"
                android:paddingLeft="100dp"
                android:paddingRight="100dp"
                android:singleLine="true"
                android:textColor="@color/black2"
                android:textColorHint="@color/black3"
                android:textSize="12.5sp"
                android:background="@drawable/edittext_bg" />
            
            <View
                android:layout_width="1dp"
                android:layout_height="32dp"
                android:background="@color/xian"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/textView1" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="14dp"
                android:onClick="onClick"
                android:paddingLeft="20dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:singleLine="true"
                android:text="@string/app_sendcode"
                android:textColor="@color/green"
                android:textSize="12sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="输入密码"
                android:textColor="@color/black1"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/settransactionpassword_h7"
                android:gravity="center_vertical|right"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textStyle="bold"
                android:paddingLeft="100dp"
                android:textColor="@color/black2"
                android:textColorHint="@color/black3"
                android:textSize="12.5sp"
                android:background="@drawable/edittext_bg" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="确认密码"
                android:layout_centerVertical="true"
                android:textColor="@color/black1"
                android:textStyle="bold"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/settransactionpassword_h9"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textStyle="bold"
                android:gravity="center_vertical|right"
                android:paddingLeft="100dp"
                android:textColor="@color/black2"
                android:textColorHint="@color/black3"
                android:textSize="12.5sp"
                android:background="@drawable/edittext_bg" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_img1"
            android:gravity="center"
            android:layout_gravity="center"
            android:onClick="onClick"
            android:visibility="visible"
            android:text="确认"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>